tests/codegen/fail/interface/struct/derive_unnamed_field.rs
use juniper::GraphQLInterface;

#[derive(GraphQLInterface)]
struct Character(i32);

fn main() {}
